# AgentAnalytics

./: README.md  pyproject.toml
agentanalytics-ui/: index.html  package-lock.json  package.json
agentanalytics-ui/src/: App.tsx  main.tsx
agentanalytics-ui/src/lib/: api.ts
agentanalytics-ui/src/pages/: NewRunPage.tsx  PluginsPage.tsx  RunDetailPage.tsx  RunsPage.tsx
agentanalytics-ui/src/ui/: PluginPanel.tsx
agentanalytics/adapters/: mlflow_adapter.py
agentanalytics/cli/: main.py
agentanalytics/config/: __init__.py  loader.py  models.py
agentanalytics/core/: __init__.py  model.py  plugin.py  plugin_meta.py  runner.py  schema.py  view.py
agentanalytics/examples/: config.yaml
agentanalytics/plugins/: emerging_topics.py  faq_detector.py  query_complexity.py  registry.py  resolver.py  sentiment.py  tool_reliability.py  tool_use_patterns.py
agentanalytics/utils/: clustering.py  embeddings.py  textnorm.py
agentanalytics_server/: app.py  main.py  models.py  run_manager.py
agentanalytics_server/routes/: plugins.py  runs.py
test/: create_complex_traces.py  create_simple_traces.py
